// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div
  class="alu-transfer"
>
  <div
    class="alu-transfer-list"
  >
    <div
      class="alu-transfer-list-header"
    >
      <label
        class="alu-checkbox-wrapper alu-checkbox-wrapper-checked"
      >
        <span
          class="alu-checkbox alu-checkbox-checked"
        >
          <input
            checked=""
            class="alu-checkbox-input"
            type="checkbox"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="alu-transfer-list-header-selected"
      >
        <span>
          1/2 items
        </span>
        <span
          class="alu-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="alu-transfer-list-body"
    >
      <ul
        class="alu-transfer-list-content"
      >
        <li
          class="alu-transfer-list-content-item"
        >
          <label
            class="alu-checkbox-wrapper alu-checkbox-wrapper-checked"
          >
            <span
              class="alu-checkbox alu-checkbox-checked"
            >
              <input
                checked=""
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
        <li
          class="alu-transfer-list-content-item alu-transfer-list-content-item-disabled"
        >
          <label
            class="alu-checkbox-wrapper alu-checkbox-wrapper-disabled"
          >
            <span
              class="alu-checkbox alu-checkbox-disabled"
            >
              <input
                class="alu-checkbox-input"
                disabled=""
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="alu-transfer-operation"
  >
    <button
      class="alu-btn alu-btn-primary alu-btn-sm alu-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="alu-btn alu-btn-primary alu-btn-sm alu-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="alu-transfer-list"
  >
    <div
      class="alu-transfer-list-header"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="alu-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="alu-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="alu-transfer-list-body"
    >
      <ul
        class="alu-transfer-list-content"
      >
        <li
          class="alu-transfer-list-content-item"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div
  class="alu-transfer"
>
  <div
    class="alu-transfer-list"
  >
    <div
      class="alu-transfer-list-header"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="alu-transfer-list-header-selected"
      >
        <span>
          1 item
        </span>
        <span
          class="alu-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="alu-transfer-list-body"
    >
      <ul
        class="alu-transfer-list-content"
      >
        <li
          class="alu-transfer-list-content-item"
          title="a"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span>
            a
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="alu-transfer-operation"
  >
    <button
      class="alu-btn alu-btn-primary alu-btn-sm alu-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="right"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
    </button>
    <button
      class="alu-btn alu-btn-primary alu-btn-sm alu-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="left"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="alu-transfer-list"
  >
    <div
      class="alu-transfer-list-header"
    >
      <label
        class="alu-checkbox-wrapper"
      >
        <span
          class="alu-checkbox"
        >
          <input
            class="alu-checkbox-input"
            type="checkbox"
          />
          <span
            class="alu-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="alu-transfer-list-header-selected"
      >
        <span>
          2 items
        </span>
        <span
          class="alu-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="alu-transfer-list-body"
    >
      <ul
        class="alu-transfer-list-content"
      >
        <li
          class="alu-transfer-list-content-item"
          title="c"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span>
            c
          </span>
        </li>
        <li
          class="alu-transfer-list-content-item"
          title="b"
        >
          <label
            class="alu-checkbox-wrapper"
          >
            <span
              class="alu-checkbox"
            >
              <input
                class="alu-checkbox-input"
                type="checkbox"
              />
              <span
                class="alu-checkbox-inner"
              />
            </span>
          </label>
          <span>
            b
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
